--- a/app/views/index.html
+++ b/app/views/index.html
@@ -39,8 +39,8 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
+              <li><a ng-href="#/instructions">Instructions</a></li>
               <li><a ng-href="#/contact">Contact</a></li>
             </ul>
           </div>
@@ -54,7 +54,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-fire"></span></p>
       </div>
     </div>
 
@@ -78,6 +78,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/contact.js"></script>
+        <script src="scripts/controllers/instructions.js"></script>
         <!-- endbuild -->
 </body>
 </html>
